# LagEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LagEngine.sln  LagEngineLog.txt  README.md
LagEngine/: CMakeLists.txt  LagEngine.vcxproj  LagEngine.vcxproj.filters  Notes.txt
LagEngine/resources/: resources.xml
LagEngine/resources/materials/: aabbGizmoMaterial.xml  axisGizmoMaterial.xml  defaultMaterial.xml  depthPassMaterial.xml  sphereGizmoMaterial.xml
LagEngine/resources/shaders/: aabbGizmo.frag  axisGizmo.frag  axisGizmo.vert
LagEngine/src/: Constants.h  IFrameListener.h  InitializationParameters.cpp  InitializationParameters.h  Root.cpp  Root.h  Types.h
LagEngine/src/collisions/: AABB.cpp  AABB.h  BoundingSphere.cpp  BoundingSphere.h  CollisionManager.cpp  CollisionManager.h  CollisionUtils.cpp  CollisionUtils.h  IBoundingVolume.cpp  IBoundingVolume.h  ICollider.h  ICollisionListener.h  IntersectionResult.h
LagEngine/src/core/: Buffer.cpp  Buffer.h  Handle.cpp  Handle.h  IFactory.h  ManagedObject.cpp  ManagedObject.h  Manager.cpp  Manager.h  Memory.cpp  Memory.h  MemoryBuffer.cpp  MemoryBuffer.h  NamedContainer.h  ObserverPattern.h  SingletonPattern.h  Timer.cpp  Timer.h  Utils.h
LagEngine/src/core/log/: LogManager.cpp  LogManager.h
LagEngine/src/graphicsAPIs/gl4/: GL4Error.cpp  GL4Error.h  GL4GpuBuffer.cpp  GL4GpuBuffer.h  GL4GpuBufferManager.cpp  GL4GpuBufferManager.h  GL4GpuProgram.cpp  GL4GpuProgram.h  GL4GpuProgramFactory.h  GL4GpuProgramManager.h  GL4GpuProgramStage.cpp  GL4GpuProgramStage.h  GL4GpuProgramStageFactory.h  GL4GpuProgramStageManager.h  GL4GpuProgramUniform.cpp  GL4GpuProgramUniform.h  GL4GraphicsAPI.cpp  GL4GraphicsAPI.h  GL4Includes.h  GL4IndexBuffer.cpp  GL4IndexBuffer.h  GL4IndexBufferFactory.h  GL4InputDescription.cpp  GL4InputDescription.h  GL4InputDescriptionManager.cpp  GL4InputDescriptionManager.h  GL4RenderToTexture.cpp  GL4RenderToTexture.h  GL4Texture.cpp  GL4Texture.h  GL4TextureManager.h  GL4VertexBuffer.cpp  GL4VertexBuffer.h  GL4VertexBufferFactory.h
LagEngine/src/io/: ICursorListener.h  IKeyboardListener.h  InputManager.cpp  InputManager.h  Keys.h  ResourceFilesWatcher.cpp  ResourceFilesWatcher.h
LagEngine/src/io/ini/: IniManager.cpp  IniManager.h  IniParser.cpp  IniParser.h  IniSettings.cpp  IniSettings.h
LagEngine/src/io/log/: LogManager.cpp  LogManager.h  LogTypes.h
LagEngine/src/platform/: GLFW_GL4Factory.cpp  GLFW_GL4Factory.h  GLFW_GL4_5Factory.cpp  GLFW_GL4_5Factory.h  IPlatformFactory.h  PlatformType.h
LagEngine/src/renderer/: BlendingSettings.cpp  BlendingSettings.h  Camera.h  Color.cpp  Color.h  ComparisionFunction.h  DepthSettings.cpp  DepthSettings.h  Entity.cpp  Entity.h  Frustum.cpp  Frustum.h  GpuBuffer.cpp  GpuBuffer.h  GpuBufferManager.cpp  GpuBufferManager.h  GpuInterfaceType.h  GpuProgramManager.cpp  GpuProgramManager.h  GpuProgramStageUniforms.cpp  GpuProgramStageUniforms.h  GpuProgramUniformDescription.cpp  GpuProgramUniformDescription.h  GpuProgramUniformFiller.cpp  GpuProgramUniformFiller.h  GpuProgramUniforms.cpp  GpuProgramUniforms.h  GraphicsApiType.h  IFrameListener.h  IRenderTargetListener.h  IRenderable.h  IWindowListener.h  IndexData.cpp  IndexData.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pass.cpp  Pass.h  (+36 more)
LagEngine/src/rendering/: IRenderTarget.h  IWindowListener.h  RenderWindow.cpp  RenderWindow.h  RenderWindowParameters.cpp  RenderWindowParameters.h
LagEngine/src/resources/: GpuBufferManager.cpp  GpuBufferManager.h  GpuProgramFactory.cpp  GpuProgramFactory.h  GpuProgramManager.cpp  GpuProgramManager.h  GpuProgramStageFactory.cpp  GpuProgramStageFactory.h  GpuProgramStageManager.cpp  GpuProgramStageManager.h  IResourceFactory.h  Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  InputDescriptionManager.cpp  InputDescriptionManager.h  MaterialFactory.cpp  MaterialFactory.h  MaterialManager.cpp  MaterialManager.h  MeshFactory.cpp  MeshFactory.h  MeshManager.cpp  MeshManager.h  MeshRepository.cpp  MeshRepository.h  RenderTargetManager.cpp  RenderTargetManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h  XmlResource.cpp  XmlResource.h  XmlResourceManager.h
LagEngine/src/scene/: AxisGizmo.cpp  AxisGizmo.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Entity.cpp  Entity.h  FreeCamera.cpp  FreeCamera.h  Frustum.cpp  Frustum.h  Light.cpp  Light.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneObject.cpp  SceneObject.h  Sky.cpp  Sky.h  SubEntity.cpp  SubEntity.h  Transform.cpp  Transform.h
LagEngine/src/utils/: CubicHermiteInterpolator.h  FreeCamera.cpp  FreeCamera.h  InterpolatedCamera.cpp  InterpolatedCamera.h  Interpolator.h  LinearInterpolator.h  MeshRepository.cpp  MeshRepository.h  Utils.cpp  Utils.h
PongDot/: CMakeLists.txt  startupDebug.ini  startupRelease.ini
PongDot/resources/: resources.xml
PongDot/resources/materials/: ballMaterial.xml
PongDot/resources/shaders/: point.frag  point.tesc  point.tese  pointBall.tese  pointNoLight.frag  pointSpiral.tese
PongDot/src/: App.cpp  App.h  Ball.cpp  Ball.h  Box.cpp  Box.h  MainScene.cpp  MainScene.h  Paddle.cpp  Paddle.h  Plane.cpp  Plane.h  Star.cpp  Star.h  main.cpp
TestApplication/: CMakeLists.txt  TestApplication.vcxproj  TestApplication.vcxproj.filters  startupDebug.ini  startupRelease.ini
TestApplication/resources/: resources.xml
TestApplication/resources/materials/: baseMaterial.xml  depthPassMaterial.xml  objectMaterial.xml  pianoMaterial.xml  pointMaterial.xml  skyMaterial.xml
TestApplication/resources/shaders/: main.frag  main.vert  point.frag  point.tesc  point.tese  point.vert  sky.frag  sky.vert  wireframe.frag  wireframe.geom
TestApplication/src/: Ball.cpp  Ball.h  TestApplication.cpp  TestApplication.h  TestScene.cpp  TestScene.h  TestScene2.cpp  TestScene2.h  TestScene3.cpp  TestScene3.h  main.cpp
(+106 files in other folders)
